[metadata]
name = jlpp
version = attr: jlpp.__version__
description = Source code for NeurIPS 2022 paper "Approximate Euclidean lengths and distances beyond Johnson-Lindenstrauss".
author = Aleksandros Sobczyk
author_email = obc@zurich.ibm.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    scipy>=1.9.2
    numpy>=1.23.4
    matplotlib>=3.6.1
    pydantic>=1.10.2
    click>=8.1.3

[options.packages.find]
where = src

[options.package_data]
jlpp =
    py.typed

[options.entry_points]
console_scripts =
    compare-jl-vs-jlpp = jlpp.scripts.jl_vs_jlpp:main

[options.extras_require]
dev =
    black>=22.3.0
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-PyYAML>=6.0.8
    types-requests>=2.27.30
    types-setuptools>=57.4.14

[flake8]
extend-ignore = E203, E501